refactor: use classes, update directory structure